Bug 435348 - 'Don't show contents when moving sub-windows' doesn't work, it reverts back to checked
Summary: 'Don't show contents when moving sub-windows' doesn't work, it reverts back t...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: General (other bugs)
Version First Reported In: 4.4.3
Platform: Compiled Sources All
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-04-04 16:50 UTC by acc4commissions
Modified: 2023-06-24 10:05 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description acc4commissions 2021-04-04 16:50:28 UTC
SUMMARY
The title says it all.

STEPS TO REPRODUCE
1. 
2. 
3. 

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: Win10 x64
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Ahab Greybeard 2021-04-04 19:17:16 UTC
I can confirm this for the 4.3.0, 4.4.3 and the Apr 04 5.0.0-prealpha (git 4e05187) appimages.

If canvas graphics acceleration is enabled, the 'Don't show contents ...' option is always on.
If canvas graphics acceleration is disabled, the 'Don't show contents ...' option is always off.

Setting to Confirmed.
Comment 2 Bug Janitor Service 2023-06-23 23:35:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/krita/-/merge_requests/1837
Comment 3 wolthera 2023-06-24 10:05:29 UTC
Git commit e78bae18671f91adabb1e5c29104e142fc825cbd by Wolthera van Hövell, on behalf of Freya Lupen.
Committed on 24/06/2023 at 10:04.
Pushed by woltherav into branch 'master'.

Fix 'Don't show contents when moving sub-windows'

The checkbox didn't work because the value was never written.

M  +1    -0    libs/ui/dialogs/kis_dlg_preferences.cc

https://invent.kde.org/graphics/krita/-/commit/e78bae18671f91adabb1e5c29104e142fc825cbd