Fix 'Don't show contents when moving sub-windows'

The checkbox didn't work because the value was never written.
BUG:435348